--- a/index.html
+++ b/index.html
@@ -75,17 +75,17 @@
 <body>
 
 <div id="wrap">
-    <img src="image/1.jpg" alt="" />
-    <img src="image/2.jpg" alt="" />
-    <img src="image/3.jpg" alt="" />
-    <img src="image/4.jpg" alt="" />
-    <img src="image/5.jpg" alt="" />
-    <img src="image/6.jpg" alt="" />
-    <img src="image/7.jpg" alt="" />
-    <img src="image/8.jpg" alt="" />
-    <img src="image/9.jpg" alt="" />
-    <img src="image/10.jpg" alt="" />
-    <img src="image/11.jpg" alt="" />
+    <img src="images/1.jpg" alt="" />
+    <img src="images/2.jpg" alt="" />
+    <img src="images/3.jpg" alt="" />
+    <img src="images/4.jpg" alt="" />
+    <img src="images/5.jpg" alt="" />
+    <img src="images/6.jpg" alt="" />
+    <img src="images/7.jpg" alt="" />
+    <img src="images/8.jpg" alt="" />
+    <img src="images/9.jpg" alt="" />
+    <img src="images/10.jpg" alt="" />
+    <img src="images/11.jpg" alt="" />
     <p></p>
     <div id="dynamic-text">666666</div>
 </div>
@@ -156,3 +156,4 @@
 </script>
 </body>
 </html>
+
